--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,7 +1,9 @@
+@import "../bootstrap-5.2.0/css/bootstrap.css";
 body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica,
     Arial, sans-serif;
-  margin: auto;
-  max-width: 38rem;
-  padding: 2rem;
 }
+#navbarSupportedContent {
+  display: inline;
+}
+
