--- a/src/css/professores.css
+++ b/src/css/professores.css
@@ -1,13 +1,47 @@
-.btn-buscar, .btn-cadastrar
+.btn-cadastrar, 
+.btn-horarios
 {
     background-color: rgba(136, 185, 249, 0.79);
     border: none;
-    border-radius: 1vh;
+    border-radius: 1.5vh;
     width: 30vh;
-    height: 4vh;
+    height: 4.5vh;
     color: black;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
 
-.btn-cadastrar:hover{
+.btn-cadastrar:hover,
+.btn-horarios:hover
+{
     font-weight: bold;
+
+}
+
+.box 
+{
+    width: 50%;
+    float: left;
+    height: 40%;
+}
+
+.linha-vertical 
+{
+    border-left: 2px solid;
+    box-sizing: border-box;
+    
+}
+
+p
+{
+    text-align: justify;
+    width: 90%;
+    font-size: large;
+}
+
+
+.p-buscar{
+    text-align: justify;
+    padding-left: 1vh;
 }
